lfocontrolsource: fix clang compiler warning

Cast enum to int before checking for negative values, which are
impossible according to the enum list.

gstlfocontrolsource.c:652:45: error: comparison of unsigned enum expression < 0
      is always false [-Werror,-Wtautological-compare]
  if (waveform >= num_waveforms || waveform < 0) {
                                   ~~~~~~~~ ^ ~

https://bugzilla.gnome.org/show_bug.cgi?id=653137